server/nohup.out
  File "main.py", line 91
    def do_POST(self):
      ^
SyntaxError: invalid syntax
